[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = "0.29.1"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.15", features = ["compat", "io", "io-util"] }
tungstenite = "0.26.2"
